<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:cardView="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    >

    <data class="WheatherDataBinder">


        <variable
            name="wheatherDataViewModel"
            type="com.sride.modules.userdatamodule.viewmodel.WheatherDataViewModel"/>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:id="@+id/rlText"

        >
        <TextView
            android:visibility="visible"
            android:id="@+id/txtClick"
            android:gravity="center"
            android:textStyle="bold"
            android:onClick="@{(view) -> wheatherDataViewModel.onDateSelection()}"
            android:text="Select Date"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@color/primaryDefault"
            android:layout_marginBottom="@dimen/dimen_50dp"
            android:layout_width="@dimen/dimen_100dp"
            android:layout_height="@dimen/dimen_50dp"


            />


        <TextView
            android:layout_below="@+id/txtClick"
            android:id="@+id/txtSelectedDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/dimen_50dp"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="#000"
            android:textSize="18sp"
            />

     <RelativeLayout
        android:visibility="gone"
        android:layout_below="@+id/txtSelectedDate"
        android:id="@+id/rlView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_100dp"
        cardView:cardCornerRadius="3dp"
        cardView:cardElevation="3dp"
        android:layout_margin="@dimen/acc_margin_top">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            card_view:cardBackgroundColor="#fff"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true"
            >


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="4"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_marginTop="@dimen/acc_margin_top"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    >


                    <TextView
                        android:id="@+id/tempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/appImage"
                        android:text="Temp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        />


                    <TextView
                        android:id="@+id/txtTemp"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@{wheatherDataViewModel.temp}"
                        android:textSize="@dimen/dimen_16sp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:textColor="#000">

                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="@dimen/acc_margin_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"

                    >


                    <TextView
                        android:id="@+id/txtDayText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/appImage"
                        android:text="@string/day"
                        android:textColor="#000"
                        android:layout_marginLeft="@dimen/dimen_10dp"
                        android:textSize="18sp"
                       />

                    <TextView
                        android:id="@+id/txtMaxText"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@{wheatherDataViewModel.day}"

                        android:textSize="@dimen/dimen_16sp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:textColor="#000">

                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/acc_margin_top"

                    android:layout_weight="1"

                    >


                    <TextView
                        android:id="@+id/txtMaxTempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/max_temp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        />

                    <TextView
                        android:id="@+id/txtMaxTemp"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:textColor="#000"
                        android:text="@{wheatherDataViewModel.maxTemp}"
                        android:textSize="@dimen/dimen_16sp"
                        android:textStyle="bold">

                    </TextView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/acc_margin_top"

                    android:layout_weight="1"

                    >


                    <TextView
                        android:id="@+id/txtMinTempText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/appImage"
                        android:text="@string/min_temp"
                        android:textColor="#000"
                        android:textSize="18sp"
                      />

                    <TextView
                        android:id="@+id/txtMinTemp"
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:text="@{wheatherDataViewModel.minTemp}"
                        android:textSize="@dimen/dimen_16sp"
                        android:layout_marginTop="@dimen/dimen_10dp"
                        android:textColor="#000">

                    </TextView>
                </LinearLayout>




            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    </RelativeLayout>
</layout>